@@ -7,6 +7,7 @@ x2goclient (4.0.1.3-0x2go1) UNRELEASED; urgency=low
     - Enables forwarding (delegation) of GSSAPI credentials to the server. 
     - make GSSAPI delegation configurable.
     - update ts files 
+    - update russian translation 
 
   [ Orion Poplawski ]
   * New upstream version (4.0.1.3):
